cambiando algunos estilos

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
-/* From Uiverse.io by Yaya12085 */ 
+/* From Uiverse.io by Yaya12085 */
+body {
+    background-color: rgb(241, 241, 241);
+}
+
 .form {
     display: flex;
     flex-direction: column;
@@ -9,9 +13,12 @@
     border-radius: 20px;
     position: relative;
     margin: auto;
-  }
-  
-  .title {
+    -webkit-box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+}
+
+.title {
     font-size: 28px;
     color: royalblue;
     font-weight: 600;
@@ -20,9 +27,10 @@
     display: flex;
     align-items: center;
     padding-left: 30px;
-  }
-  
-  .title::before,.title::after {
+}
+
+.title::before,
+.title::after {
     position: absolute;
     content: "";
     height: 16px;
@@ -30,56 +38,57 @@
     border-radius: 50%;
     left: 0px;
     background-color: royalblue;
-  }
-  
-  .title::before {
+}
+
+.title::before {
     width: 18px;
     height: 18px;
     background-color: royalblue;
-  }
-  
-  .title::after {
+}
+
+.title::after {
     width: 18px;
     height: 18px;
     animation: pulse 1s linear infinite;
-  }
-  
-  .message, .signin {
+}
+
+.message,
+.signin {
     color: rgba(88, 87, 87, 0.822);
     font-size: 14px;
-  }
-  
-  .signin {
+}
+
+.signin {
     text-align: center;
-  }
-  
-  .signin a {
+}
+
+.signin a {
     color: royalblue;
-  }
-  
-  .signin a:hover {
+}
+
+.signin a:hover {
     text-decoration: underline royalblue;
-  }
-  
-  .flex {
+}
+
+.flex {
     display: flex;
     width: 100%;
 
-  }
-  
-  .form label {
+}
+
+.form label {
     position: relative;
-  }
-  
-  .form label .input {
+}
+
+.form label .input {
     width: 92%;
     padding: 0.8rem;
     outline: 0;
     border: 1px solid rgba(105, 105, 105, 0.397);
     border-radius: 10px;
-  }
-  
-  .form label .input + span {
+}
+
+.form label .input+span {
     position: absolute;
     left: 10px;
     top: 15px;
@@ -87,24 +96,25 @@
     font-size: 0.9em;
     cursor: text;
     transition: 0.3s ease;
-  }
-  
-  .form label .input:placeholder-shown + span {
+}
+
+.form label .input:placeholder-shown+span {
     top: 15px;
     font-size: 0.9em;
-  }
-  
-  .form label .input:focus + span,.form label .input:valid + span {
+}
+
+.form label .input:focus+span,
+.form label .input:valid+span {
     top: 30px;
     font-size: 0.7em;
     font-weight: 600;
-  }
-  
-  .form label .input:valid + span {
+}
+
+.form label .input:valid+span {
     color: green;
-  }
-  
-  .submit {
+}
+
+.submit {
     border: none;
     outline: none;
     background-color: royalblue;
@@ -114,20 +124,20 @@
     font-size: 16px;
     transform: .3s ease;
     width: 100%;
-  }
-  
-  .submit:hover {
+}
+
+.submit:hover {
     background-color: rgb(56, 90, 194);
-  }
-  
-  @keyframes pulse {
+}
+
+@keyframes pulse {
     from {
-      transform: scale(0.9);
-      opacity: 1;
+        transform: scale(0.9);
+        opacity: 1;
     }
-  
+
     to {
-      transform: scale(1.8);
-      opacity: 0;
+        transform: scale(1.8);
+        opacity: 0;
     }
-  }
+}
