--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 
 body {
     background-color: rgb(241, 241, 241);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .form {
@@ -103,16 +104,13 @@ body {
     font-size: 0.9em;
 }
 
-.form label .input:focus+span,
+/* .form label .input:focus+span,
 .form label .input:valid+span {
     top: 30px;
     font-size: 0.7em;
     font-weight: 600;
-}
+} */
 
-.form label .input:valid+span {
-    color: green;
-}
 
 .submit {
     border: none;
@@ -128,6 +126,24 @@ body {
 
 .submit:hover {
     background-color: rgb(56, 90, 194);
+}
+
+.success{
+    border-color: green !important
+}
+
+.error{
+    font-size: 13px;
+    color:red;
+}
+
+.errorInput{
+    border-color: red !important;
+}
+
+input:focus{
+    border-color: green;
+    outline: none;
 }
 
 @keyframes pulse {
